<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/topImageView"
            style="@style/ImageViewTop"
            android:contentDescription="@string/spicy_tuna_poke_bowl"
            android:src="@drawable/food_spicy_tuna_poke_bowl"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            style="@style/CustomGradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/topImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".LoginActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/CustomProgressBar"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="124dp"
            android:layout_marginBottom="25dp"
            app:srcCompat="@drawable/logo_full_big_green_bg_no" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false" >

            <EditText
                android:id="@+id/email"
                style="@style/CustomEditTextForm"
                android:background="@drawable/custom_edittext_two_states"
                android:hint="@string/enter_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_gray_medium"
            app:hintEnabled="false" >

            <EditText
                android:id="@+id/password"
                style="@style/CustomEditTextForm"
                android:background="@drawable/custom_edittext_two_states"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error"
            style="@style/CustomTextViewError"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/incorrect_email_or_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_me"
                android:fontFamily="@font/montserrat_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calistoga_regular"
                android:paddingEnd="10dp"
                android:text="@string/forgot_password"
                android:textAlignment="viewEnd"
                android:textColor="@color/primary"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login_password"
            style="@style/CustomButtonGreenBg"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="16sp"
                android:fontFamily="@font/calistoga_regular" />

            <TextView
                android:id="@+id/sing_up_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/sing_up_now"
                android:textAlignment="viewEnd"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:fontFamily="@font/calistoga_regular"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>